--- a/src/yueche/scss/index.scss
+++ b/src/yueche/scss/index.scss
@@ -393,15 +393,32 @@ html {
 			min-height: 100%;
 			padding-top: .8rem;
 			.avatar{
+				position: relative;
 				width: 4.8rem;
 				height: 4.8rem;
 				margin: 0 auto;
 				border-radius: 50%;
+				// background-color: #1196DB;
 				overflow: hidden;
-				img{
+				z-index: 100;
+				.avatarImg{
 					display: block;
 					width: 100%;
 				}
+				.fileUpload{
+					position: absolute;
+					left: 0;
+					top: 0;
+					z-index: 5;
+					width: 100%;
+					height: 100%;
+					opacity: 0;
+				}
+			}
+			.avatarResult{
+				display: none;
+				width: 4.8rem;
+				height: 4.8rem;
 			}
 			.messageBox{
 				margin-top: 2rem;
@@ -442,6 +459,17 @@ html {
 							color: #999999;
 						}
 					}
+				}
+				.submit{
+					display: block;
+					width: 12.4rem;
+					height: 2rem;
+					margin: 0 auto;
+					font-size: 0.6rem;
+					border: none;
+					background: none;
+					background-color: #319fff;
+					color: #ffffff;
 				}
 			}
 		}
