--- a/src/jeep/css/index.css
+++ b/src/jeep/css/index.css
@@ -267,7 +267,7 @@ template { display: none; }
   44.4% { -webkit-transform: skewX(-3.125deg) skewY(-3.125deg); transform: skewX(-3.125deg) skewY(-3.125deg); }
   55.5% { -webkit-transform: skewX(1.5625deg) skewY(1.5625deg); transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg); transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg); transform: skewX(0.39063deg) skewY(0.39063deg); }
+  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg); transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg); transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
 .jello { -webkit-animation-name: jello; animation-name: jello; -webkit-transform-origin: center; -ms-transform-origin: center; transform-origin: center; }
@@ -1157,8 +1157,8 @@ template { display: none; }
     transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
     transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg); }
+  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
     transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
@@ -1174,8 +1174,8 @@ template { display: none; }
     transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
     transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg); }
+  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
     transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
@@ -2535,7 +2535,7 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .video_exist.rotate { background-image: url(../images/music_on.png); -webkit-animation: rotating 2s linear infinite; animation: rotating 2s linear infinite; }
 
-.video_exist { position: absolute; top: .64rem; right: .64rem; z-index: 1001; }
+.video_exist { position: absolute; top: .64rem; left: .64rem; z-index: 1001; }
 
 .page { display: none; position: absolute; width: 100%; height: 100%; overflow: hidden; background-repeat: no-repeat; -webkit-background-size: 100% 100%; background-size: 100%; }
 
@@ -2581,35 +2581,37 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .page03 .page03-01 { position: absolute; top: 1.4rem; right: 1rem; width: 10.16rem; }
 
-.page03 .page03-02 { position: absolute; bottom: 4.92rem; left: 50%; width: 11.04rem; margin-left: -5.52rem; }
+.page03 .page03-02 { position: absolute; bottom: 3.2rem; left: 50%; width: 11.04rem; margin-left: -5.52rem; }
 
 .page03 .kaka { position: absolute; top: 24.7%; left: 0; width: 100%; }
 
-.page03 .page03-03 { position: absolute; bottom: 2rem; right: .48rem; width: 11.96rem; }
+.page03 .page03-03 { position: absolute; bottom: 0; right: .48rem; width: 11.96rem; }
 
-.page04 { background-image: url(../images/bg4.png); background-position: center center; -webkit-background-size: cover; background-size: cover; }
+.page04 { background-image: url(../images/bg4.png); background-position: center bottom; -webkit-background-size: cover; background-size: cover; }
 
 .page04 .page04-01 { position: absolute; top: 1.44rem; left: 1.4rem; width: 10.16rem; }
 
-.page04 .page04-02 { position: absolute; bottom: 4.92rem; left: 50%; width: 13.24rem; margin-left: -6.62rem; }
+.page04 .page04-02 { position: absolute; bottom: 3.92rem; left: 50%; width: 13.24rem; margin-left: -6.62rem; }
 
-.page04 .page04-03 { position: absolute; bottom: 1.56rem; left: 1.16rem; width: 13.76rem; }
+.page04 .page04-03 { position: absolute; bottom: 0; left: 0; width: 100%; }
 
 .page05 { background-image: url(../images/bg5.png); background-position: center center; -webkit-background-size: cover; background-size: cover; }
 
 .page05 .page05-01 { position: absolute; top: 1.4rem; left: 1.36rem; width: 8.28rem; }
 
-.page05 .page05-02 { position: absolute; bottom: 4.92rem; left: 50%; width: 8.76rem; margin-left: -4.38rem; }
+.page05 .guang1 { position: absolute; top: 0; left: 0; z-index: 6; width: 100%; height: 100%; background-image: url(../images/guang1.png); background-position: center center; -webkit-background-size: cover; background-size: cover; opacity: 0; }
 
-.page05 .page05-03 { position: absolute; bottom: 26%; left: 50%; width: 1.52rem; margin-left: -.76rem; }
+.page05 .guang2 { position: absolute; top: 0; left: 0; z-index: 6; width: 100%; height: 100%; background-image: url(../images/guang2.png); background-position: center center; -webkit-background-size: cover; background-size: cover; opacity: 0; }
+
+.page05 .page05-02 { position: absolute; bottom: 3.92rem; left: 50%; width: 8.76rem; margin-left: -4.38rem; }
 
 .page06 { background-image: url(../images/bg6.png); background-position: center center; -webkit-background-size: cover; background-size: cover; }
 
 .page06 .page06-01 { position: absolute; top: 1.4rem; right: 1rem; width: 5.12rem; }
 
-.page06 .page06-02 { position: absolute; bottom: 4.92rem; left: 50%; width: 87.6%; margin-left: -43.8%; }
+.page06 .page06-02 { position: absolute; bottom: 3.92rem; left: 50%; width: 87.6%; margin-left: -43.8%; }
 
-.page06 .car { position: absolute; bottom: 26.3%; right: 1.6rem; width: 11.28rem; }
+.page06 .car { position: absolute; bottom: 18%; right: 1.6rem; width: 11.28rem; }
 
 .page06 .car .page06-03 { display: block; width: 100%; }
 
