--- a/src/jeep/css/index.css
+++ b/src/jeep/css/index.css
@@ -2533,7 +2533,7 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .video_exist.off { display: none; }
 
-.video_exist.rotate { background-image: url(../images/music_on.png); -webkit-animation: rotating 2s linear infinite; animation: rotating 2s linear infinite; }
+.video_exist.rotate { background-image: url(../images/music_on.png); }
 
 .video_exist { position: absolute; top: .64rem; left: .64rem; z-index: 1001; }
 
@@ -2581,17 +2581,17 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .page03 .page03-01 { position: absolute; top: 1.4rem; right: 1rem; width: 10.16rem; }
 
-.page03 .page03-02 { position: absolute; bottom: 3.2rem; left: 50%; width: 11.04rem; margin-left: -5.52rem; }
+.page03 .page03-02 { position: absolute; bottom: 2.92rem; left: 50%; width: 11.04rem; margin-left: -5.52rem; }
 
 .page03 .kaka { position: absolute; top: 24.7%; left: 0; width: 100%; }
 
 .page03 .page03-03 { position: absolute; bottom: 0; right: .48rem; width: 11.96rem; }
 
-.page04 { background-image: url(../images/bg4.png); background-position: center bottom; -webkit-background-size: cover; background-size: cover; }
+.page04 { background-image: url(../images/bg4.png?v=1); background-position: center bottom; -webkit-background-size: cover; background-size: cover; }
 
 .page04 .page04-01 { position: absolute; top: 1.44rem; left: 1.4rem; width: 10.16rem; }
 
-.page04 .page04-02 { position: absolute; bottom: 3.92rem; left: 50%; width: 13.24rem; margin-left: -6.62rem; }
+.page04 .page04-02 { position: absolute; bottom: 2.92rem; left: 50%; width: 13.24rem; margin-left: -6.62rem; }
 
 .page04 .page04-03 { position: absolute; bottom: 0; left: 0; width: 100%; }
 
@@ -2603,13 +2603,13 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .page05 .guang2 { position: absolute; top: 0; left: 0; z-index: 6; width: 100%; height: 100%; background-image: url(../images/guang2.png); background-position: center center; -webkit-background-size: cover; background-size: cover; opacity: 0; }
 
-.page05 .page05-02 { position: absolute; bottom: 3.92rem; left: 50%; width: 8.76rem; margin-left: -4.38rem; }
+.page05 .page05-02 { position: absolute; bottom: 2.92rem; left: 50%; width: 8.76rem; margin-left: -4.38rem; }
 
 .page06 { background-image: url(../images/bg6.png); background-position: center center; -webkit-background-size: cover; background-size: cover; }
 
 .page06 .page06-01 { position: absolute; top: 1.4rem; right: 1rem; width: 5.12rem; }
 
-.page06 .page06-02 { position: absolute; bottom: 3.92rem; left: 50%; width: 87.6%; margin-left: -43.8%; }
+.page06 .page06-02 { position: absolute; bottom: 2.92rem; left: 50%; width: 87.6%; margin-left: -43.8%; z-index: 5; }
 
 .page06 .car { position: absolute; bottom: 18%; right: 1.6rem; width: 11.28rem; }
 
@@ -2635,7 +2635,7 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .page07 .page07-02 .page07-03 { display: block; width: 11rem; margin-top: .8rem; }
 
-.page07 .page07-02 .page07-04 { display: block; width: 11rem; margin-top: .8rem; }
+.page07 .page07-02 .page07-04 { display: block; width: 11rem; margin-top: .8rem; z-index: 10; position: relative; }
 
 .page07 .page07-05 { position: absolute; bottom: 0; left: 0; width: 100%; }
 
@@ -2674,6 +2674,8 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 .cover3 .message .tip .close { position: absolute; top: 0; right: 0; width: .48rem; height: .48rem; }
 
 .cover3 .message .tip .close img { display: block; }
+
+.cover4 { position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 105; }
 
 @-webkit-keyframes rotating { from { -webkit-transform: rotate(0);
     transform: rotate(0); }
