--- a/src/jeep/scss/index.scss
+++ b/src/jeep/scss/index.scss
@@ -22,7 +22,7 @@ body{
 }
 .video_exist.rotate { 
   background-image: url(../images/music_on.png);
-  animation: rotating 2s linear infinite;
+  // animation: rotating 2s linear infinite;
 }
 .video_exist {
   position: absolute;
@@ -175,7 +175,7 @@ body{
   }
   .page03-02{
     position: absolute;
-    bottom: 3.2rem;
+    bottom: 2.92rem;
     left: 50%;
     width: 11.04rem;
     margin-left: -5.52rem;
@@ -194,7 +194,7 @@ body{
   }
 }
 .page04{
-  background-image: url(../images/bg4.png);
+  background-image: url(../images/bg4.png?v=1);
   background-position: center bottom;
   background-size: cover;
   .page04-01{
@@ -205,7 +205,7 @@ body{
   }
   .page04-02{
     position: absolute;
-    bottom: 3.92rem;
+    bottom: 2.92rem;
     left: 50%;
     width: 13.24rem;
     margin-left: -6.62rem;
@@ -253,7 +253,7 @@ body{
   }
   .page05-02{
     position: absolute;
-    bottom: 3.92rem;
+    bottom: 2.92rem;
     left: 50%;
     width: 8.76rem;
     margin-left: -4.38rem;
@@ -278,10 +278,11 @@ body{
   }
   .page06-02{
     position: absolute;
-    bottom: 3.92rem;
+    bottom: 2.92rem;
     left: 50%;
     width: 87.6%;
     margin-left: -43.8%;
+    z-index: 5;
   }
   .car{
     position: absolute;
@@ -373,6 +374,8 @@ body{
       display: block;
       width: 11rem;
       margin-top: .8rem;
+      z-index: 10;
+      position: relative;
     }
   }
   .page07-05{
@@ -496,6 +499,15 @@ body{
       }
     }
   }
+}
+
+.cover4{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 105;
 }
 
 // 播放按钮动画
