替换背景音乐

--- a/src/jeep/scss/index.scss
+++ b/src/jeep/scss/index.scss
@@ -521,7 +521,10 @@ body{
 
 // 插件样式更改
 .area_roll>div .gear {
-  // margin-top: 0;
+  margin-top: 2em;
+}
+.area_grid{
+  top: 2em;
 }
 
 // 播放按钮动画
