--- a/src/jeep/css/index.css
+++ b/src/jeep/css/index.css
@@ -2677,6 +2677,10 @@ html, body { position: relative; width: 100%; height: 100%; overflow: hidden; -w
 
 .cover4 { position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 105; }
 
+.area_roll > div .gear { margin-top: 2em; }
+
+.area_grid { top: 2em; }
+
 @-webkit-keyframes rotating { from { -webkit-transform: rotate(0);
     transform: rotate(0); }
   to { -webkit-transform: rotate(360deg);
